update dependencies and tests